2019-03-25  Karl Berry  <karl@freefriends.org>

	* gftodvi.man: omit unused second font letter. From Debian.

2019-03-10  Andreas Scherer  <https://ascherer.github.io>

	* ctwill.man: Fix non-macro '\\PB';
	add reference to 'Digital Typography' with full example.

2019-02-01  Andreas Scherer  <https://ascherer.github.io>

	* ctwill.man,
	* cweb.man: Recompile manpages with Pandoc 2.6.  This un-escapes
	'-', because it was rendered as "unicode minus"; see release page
	https://github.com/jgm/pandoc/releases/tag/2.6

2019-01-28  Andreas Scherer  <https://ascherer.github.io>

	* ctwill.man,
	* cweb.man: Updated manpages; describe differences to original CWEB.

2019-01-10  Andreas Scherer  <https://ascherer.github.io>

	* ctwill.man: New manpage for CTWILL and its tools.
	* Makefile.am (bootstrap_man_sources): add ctwill.man.
	(man1_links): add ctwill-refsort and ctwill-twinx as ctwill aliases.

2019-01-10  Andreas Scherer  <https://ascherer.github.io>

	* cweb.man: editorial changes.

2019-01-06  Andreas Scherer  <https://ascherer.github.io>

	* cweb.man: update for CWEBbin options, etc.

2018-12-21  Karl Berry  <karl@freefriends.org>

	* mpost.man: mention rmpost, (r)pmpost, and (r)upmpost.

2018-10-28  Andreas Scherer  <https://ascherer.github.io>

	* cweb.man: do not mention nonexistent -DSTAT option.

2018-06-04  Karl Berry  <karl@tug.org>

	* Makefile.am (man_sources, man1_links) [PTEX]: add ptex.man.

2018-05-27  Karl Berry  <karl@tug.org>

	* aleph.man,
	* etex.man,
	* luatex.man,
	* mft.man,
	* ptex.man: typos.

2018-05-26  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* ptex.man: new.

2018-04-30  Karl Berry  <karl@tug.org>

	* latex.man: update latexrefman url to
	https://ctan.org/pkg/latex2e-help-texinfo.
	tldoc report from Antoon, 27 Apr 2018 22:15:39.
	Also add more *latex program names as aliases.

2018-02-23  Karl Berry  <karl@freefriends.org>

	* bibtex.man: mention need to remove aux file from previous run
	for -min-crossrefs to be effective.