@@ -1,3 +1,7 @@
+2019-03-30  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
+
+	* ppltotf.man, ptftopl.man: new.
+
 2019-03-25  Karl Berry  <karl@freefriends.org>
 
 	* gftodvi.man: omit unused second font letter. From Debian.
